[gd_scene load_steps=5 format=3 uid="uid://c2gwxiu7kkwvs"]

[ext_resource type="Theme" uid="uid://cdbir6qeifrph" path="res://ui/panel_theme.tres" id="1_50qix"]
[ext_resource type="Script" path="res://ui/hud.gd" id="1_ejcmk"]
[ext_resource type="LabelSettings" uid="uid://b0u07fspob1bq" path="res://ui/label_settings.tres" id="2_e53lh"]
[ext_resource type="PackedScene" uid="uid://bp6cvvvb824pg" path="res://ui/icon.tscn" id="2_v7o17"]

[node name="Hud" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ejcmk")
icon_scene = ExtResource("2_v7o17")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -132.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(256, 64)
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 8
alignment = 2

[node name="EnergyPanel" type="Panel" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 72)
layout_mode = 2
theme = ExtResource("1_50qix")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/EnergyPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/EnergyPanel/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/EnergyPanel/MarginContainer/VBoxContainer2"]
layout_mode = 2
text = "Energy
"
label_settings = ExtResource("2_e53lh")
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/EnergyPanel/MarginContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_right = 8

[node name="EnergyPB" type="ProgressBar" parent="MarginContainer/HBoxContainer/VBoxContainer/EnergyPanel/MarginContainer/VBoxContainer2/MarginContainer"]
modulate = Color(0.966667, 1, 0, 1)
layout_mode = 2
max_value = 1.0
value = 1.0

[node name="HullPanel" type="Panel" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 72)
layout_mode = 2
theme = ExtResource("1_50qix")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/HullPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer3" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/HullPanel/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/HullPanel/MarginContainer/VBoxContainer3"]
layout_mode = 2
text = "Hull Integrity"
label_settings = ExtResource("2_e53lh")
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/HullPanel/MarginContainer/VBoxContainer3"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_right = 8

[node name="HullPB" type="ProgressBar" parent="MarginContainer/HBoxContainer/VBoxContainer/HullPanel/MarginContainer/VBoxContainer3/MarginContainer"]
modulate = Color(0, 1, 0.95, 1)
layout_mode = 2
max_value = 1.0
value = 1.0

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
size_flags_horizontal = 6
alignment = 2

[node name="Panel3" type="Panel" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 72)
layout_mode = 2
size_flags_vertical = 10
theme = ExtResource("1_50qix")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2/Panel3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2/Panel3/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer2/Panel3/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "Depth"
label_settings = ExtResource("2_e53lh")
horizontal_alignment = 1

[node name="DepthLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer2/Panel3/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "0 m"
label_settings = ExtResource("2_e53lh")
horizontal_alignment = 1

[node name="VBoxContainer3" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
size_flags_horizontal = 8
alignment = 2

[node name="Panel3" type="Panel" parent="MarginContainer/HBoxContainer/VBoxContainer3"]
custom_minimum_size = Vector2(0, 160)
layout_mode = 2
size_flags_vertical = 10
theme = ExtResource("1_50qix")

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer3/Panel3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer3/Panel3/MarginContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer3/Panel3/MarginContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "Cargo"
label_settings = ExtResource("2_e53lh")
horizontal_alignment = 1

[node name="CargoHFlowContainer" type="HFlowContainer" parent="MarginContainer/HBoxContainer/VBoxContainer3/Panel3/MarginContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1
